fix(inline-notification): add low-contrast styles

--- a/packages/components/src/components/notification/_inline-notification.scss
+++ b/packages/components/src/components/notification/_inline-notification.scss
@@ -185,10 +185,19 @@
     }
   }
 
-  .#{$prefix}--inline-notification--low-contrast
+  .#{$prefix}--inline-notification--low-contrast {
     .#{$prefix}--inline-notification__close-button
-    .#{$prefix}--inline-notification__close-icon {
-    fill: $ui-05;
+      .#{$prefix}--inline-notification__close-icon {
+      fill: $ui-05;
+    }
+
+    .#{$prefix}--inline-notification__action-button {
+      color: $link-01;
+
+      &:hover {
+        background-color: $ui-background;
+      }
+    }
   }
 }
 
